--- a/index.html
+++ b/index.html
@@ -77,14 +77,21 @@
 		</div>
 	</div>
 
+	<footer>
+		<div id="socialmedia">
+			<h3>Redes Sociales</h3>
+			<a href="#"><i class="flaticon-social-facebook-circular-button"></i></a>
+			<a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a>
 
-	<section>
-	    <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime aperiam incidunt sunt, temporibus aut eligendi earum neque dolorem, ipsum quae at itaque error? Ex odit laudantium nisi modi labore autem.</p></div>
-	    <div></div>
-	    <div></div>
-	</section>
-
-	
+		</div>
+		<div id="btn-mail">
+			<a href="">¿Conversamos?</a>
+			<i class="material-icons">forum</i>
+		</div>
+		<p>© 2017 Copyright RINSACORP. All rights reserved</p>
+		<div></div>
+	</footer>
+		
 	<!--Import jQuery before materialize.js-->
 	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
