--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Normalize -->
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<!--Import materialize.css-->
-	<!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
+	<!-- <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/> -->
 	<!-- Icons -->
 	<link rel="stylesheet" type="text/css" href="css/font/flaticon.css">
 	<!-- Estilos Externos -->
@@ -79,9 +79,11 @@
 
 	<footer>
 		<div id="socialmedia">
-			<h3>Redes Sociales</h3>
-			<a href="#"><i class="flaticon-social-facebook-circular-button"></i></a>
-			<a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a>
+			
+				<!-- <a href="#"><i class="flaticon-social-twitter-circular-button"></i></a> -->
+				<a href="#"><i class="flaticon-social-facebook-circular-button"></i></a>
+				<a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a>
+			
 
 		</div>
 		<div id="btn-mail">
@@ -89,7 +91,7 @@
 			<i class="material-icons">forum</i>
 		</div>
 		<p>© 2017 Copyright RINSACORP. All rights reserved</p>
-		<div></div>
+		
 	</footer>
 		
 	<!--Import jQuery before materialize.js-->
