Botones en linea
Los botones del footer OK

--- a/index.html
+++ b/index.html
@@ -78,17 +78,11 @@
 	</div>
 
 	<footer>
-		<div id="socialmedia">
-			
-				<!-- <a href="#"><i class="flaticon-social-twitter-circular-button"></i></a> -->
-				<a href="#"><i class="flaticon-social-facebook-circular-button"></i></a>
-				<a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a>
-			
-
-		</div>
 		<div id="btn-mail">
-			<a href="">¿Conversamos?</a>
-			<i class="material-icons">forum</i>
+				<a href="https://www.facebook.com/rinsacorp"><i class="flaticon-social-facebook-circular-button"></i></a>
+				<a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a>
+			<a href=""><i class="material-icons">forum</i></a>
+			
 		</div>
 		<p>© 2017 Copyright RINSACORP. All rights reserved</p>
 		
