Formatos OK + nosotros.html
Formatos mobile ok + hipervinculos sin vinculos a sección

--- a/nosotros.html
+++ b/nosotros.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>RINSA</title>
+	<title>RINSA | Nosotros</title>
 	<!--Import Google Icon Font-->
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- Normalize -->
@@ -29,8 +29,8 @@
 				<li class="submenu">
 					<a href="#">Nosotros</a>
 					<ul class="submenu">
-						<li><a href="nosotros.html">Nuestra Historia</a></li>
-						<li><a href="nosotros.html#proposito">Nuestro Propósito</a></li>
+						<li><a href="#">Nuestra Historia</a></li>
+						<li><a href="#">Nuestro Propósito</a></li>
 						<li><a href="#">Nuestra Organización</a></li>
 						<li><a href="#">Nuestro Equipo</a></li>
 						<li><a href="#">Nuestros Sueños</a></li>
@@ -65,17 +65,42 @@
 			</ul>
 		</nav>
 	</header>
+
 	
-	<div class="main">
-		<div class="slides">
-			<img src="img/001.jpeg" alt="">
-			<img src="img/002.jpeg" alt="">
-			<img src="img/003.jpeg" alt="">
-			<img src="img/1.jpg" alt="">
-			<img src="img/2.jpg" alt="">
-			<img src="img/3.jpg" alt="">
+
+	<section>
+		<div id="pagName">Nosotros</div>
+		<div id="sectionleft">
+			<div class="sectionName">Nuestra Historia</div>
+			<div class="sectionDesc">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+			</div>
 		</div>
-	</div>
+		
+		<div id="sectionright">
+			<img src="img/1.jpg">
+			
+		</div>
+	</section>
+
+	<section>
+		<div id="sectionleft">
+			<div class="sectionName">Nuestro Propósito</div>
+			<div class="sectionDesc">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+			</div>
+		</div>
+		
+		<div id="sectionright">
+			<img src="img/1.jpg">
+			
+		</div>
+	</section>
+
 
 	<footer>
 		<div id="btn-mail">
