--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
 			<img src="img/3.jpg" alt="">
 		</div>
 	</div>
+	
+	<div>
+		<div class="cajas"></div>
+		<div class="cajas"></div>
+		<div class="cajas"></div>
+		<div class="cajas"></div>
+	</div>
 
 	<footer>
 		<div id="btn-mail">
