--- a/nosotros.html
+++ b/nosotros.html
@@ -76,6 +76,12 @@
 				<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
 				</p>
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
 			</div>
 		</div>
 		
