--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<a href="#">Nosotros</a>
 					<ul class="submenu">
 						<li><a href="nosotros.html">Nuestra Historia</a></li>
-						<li><a href="nosotros.html#proposito">Nuestro Propósito</a></li>
+						<li><a href="nosotros.html#propo">Nuestro Propósito</a></li>
 						<li><a href="#">Nuestra Organización</a></li>
 						<li><a href="#">Nuestro Equipo</a></li>
 						<li><a href="#">Nuestros Sueños</a></li>
