--- a/nosotros.html
+++ b/nosotros.html
@@ -70,7 +70,7 @@
 
 	<section>
 		<div id="pagName">Nosotros</div>
-		<div id="sectionleft">
+		<div id="historia" class="sectionleft">
 			<div class="sectionName">Nuestra Historia</div>
 			<div class="sectionDesc">
 				<p>
@@ -92,7 +92,7 @@
 	</section>
 
 	<section>
-		<div id="sectionleft">
+		<div id="propo" class="sectionleft">
 			<div class="sectionName">Nuestro Propósito</div>
 			<div class="sectionDesc">
 				<p>
