--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 	<title>RINSA</title>
 	<!--Import Google Icon Font-->
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!-- JQuery -->
+	<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
 	<!-- Normalize -->
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<!--Import materialize.css-->
-	<!-- <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/> -->
-	<!-- Icons -->
 	<link rel="stylesheet" type="text/css" href="css/font/flaticon.css">
 	<!-- Estilos Externos -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,6 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!-- Modernizr -->
 	<script type="text/javascript" src="js/modernizr-custom.js"></script>
+
 </head>
 <body>
 	<header>
@@ -29,14 +29,14 @@
 				<li class="submenu">
 					<a href="#">Nosotros</a>
 					<ul class="submenu">
-						<li><a href="nosotros.html">Nuestra Historia</a></li>
-						<li><a href="nosotros.html#propo">Nuestro Propósito</a></li>
-						<li><a href="#">Nuestra Organización</a></li>
-						<li><a href="#">Nuestro Equipo</a></li>
-						<li><a href="#">Nuestros Sueños</a></li>
-						<li><a href="#">Nuestros Convenios</a></li>
-						<li><a href="#">Nuestros Compromisos</a></li>
-						<li><a href="#">Más Información</a></li>
+						<li><a class="anclas" href="nosotros.html">Nuestra Historia</a></li>
+						<li><a class="anclas" href="nosotros.html#propo">Nuestro Propósito</a></li>
+						<li><a class="anclas" href="nosotros.html#orga">Nuestra Organización</a></li>
+						<li><a class="anclas" href="nosotros.html#equipo">Nuestro Equipo</a></li>
+						<li><a class="anclas" href="#">Nuestros Sueños</a></li>
+						<li><a class="anclas" href="#">Nuestros Convenios</a></li>
+						<li><a class="anclas" href="#">Nuestros Compromisos</a></li>
+						<li><a class="anclas" href="#">Más Información</a></li>
 					</ul>
 				</li>
 				<li class="submenu">
@@ -93,11 +93,7 @@
 		</div>
 		<p>© 2017 Copyright RINSACORP. All rights reserved</p>
 		
-	</footer>
-		
-	<!--Import jQuery before materialize.js-->
-	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/materialize.min.js"></script>
+	</footer>	
 	<script src="js/main.js"></script>
 	<script src="js/jquery.slides.js"></script>
 	<script>
