--- a/nosotros.html
+++ b/nosotros.html
@@ -5,18 +5,16 @@
 	<title>RINSA | Nosotros</title>
 	<!--Import Google Icon Font-->
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!-- JQuery -->
+	<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
 	<!-- Normalize -->
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<!--Import materialize.css-->
-	<!-- <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/> -->
 	<!-- Icons -->
 	<link rel="stylesheet" type="text/css" href="css/font/flaticon.css">
 	<!-- Estilos Externos -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- Let browser know website is optimized for mobile -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<!-- Modernizr -->
-	<script type="text/javascript" src="js/modernizr-custom.js"></script>
 </head>
 <body>
 	<header>
@@ -29,10 +27,10 @@
 				<li class="submenu">
 					<a href="#">Nosotros</a>
 					<ul class="submenu">
-						<li><a href="#">Nuestra Historia</a></li>
-						<li><a href="#">Nuestro Propósito</a></li>
-						<li><a href="#">Nuestra Organización</a></li>
-						<li><a href="#">Nuestro Equipo</a></li>
+						<li><a href="#historia">Nuestra Historia</a></li>
+						<li><a href="#propo">Nuestro Propósito</a></li>
+						<li><a href="#orga">Nuestra Organización</a></li>
+						<li><a href="#equipo">Nuestro Equipo</a></li>
 						<li><a href="#">Nuestros Sueños</a></li>
 						<li><a href="#">Nuestros Convenios</a></li>
 						<li><a href="#">Nuestros Compromisos</a></li>
@@ -92,8 +90,11 @@
 	</section>
 
 	<section>
-		<div id="propo" class="sectionleft">
-			<div class="sectionName">Nuestro Propósito</div>
+		<div class="sectionleft">
+			<div class="sectionName">
+			<a name="propo" "></a>
+				<h3>Nuestro Propósito</h3>
+			</div>
 			<div class="sectionDesc">
 				<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
@@ -108,6 +109,95 @@
 	</section>
 
 
+	<section>
+		<div class="sectionleft">
+			<div class="sectionName">
+			<a name="orga" "></a>
+				<h3>Nuestra Organización</h3>
+			</div>
+			<div class="sectionDesc">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+			</div>
+		</div>
+		
+		<div id="sectionright">
+			<img src="img/1.jpg">
+			
+		</div>
+	</section>
+
+	<section>
+		<div class="sectionleft">
+			<div class="sectionName">
+				<h3>Nuestro Equipo</h3>
+			</div>
+			<div class="sectionDesc">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+			</div>
+		</div>
+		
+		<div id="sectionright">
+			<img src="img/1.jpg">
+			
+		</div>
+	</section>
+
+	<section id="equipo">
+		<div class="sectionName">
+				<h3>Nuestro Equipo</h3>
+		</div>
+		<div class="team1">
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+			</div>
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+			</div>
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+			</div>
+		</div>
+		<div class="team">
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+			</div>
+
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+			</div>
+
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+			</div>
+
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+			</div>
+
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+			</div>
+
+			<div>
+				<div class="perfil"></div>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO</p>
+			</div>
+		</div>
+	</section>
+
+
 	<footer>
 		<div id="btn-mail">
 				<a href="https://www.facebook.com/rinsacorp"><i class="flaticon-social-facebook-circular-button"></i></a>
@@ -118,12 +208,11 @@
 		<p>© 2017 Copyright RINSACORP. All rights reserved</p>
 		
 	</footer>
-		
-	<!--Import jQuery before materialize.js-->
-	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/materialize.min.js"></script>
+
 	<script src="js/main.js"></script>
+
 	<script src="js/jquery.slides.js"></script>
+	
 	<script>
 		$(function(){
 		  $(".slides").slidesjs({
