Anclas + ids de cajas
psc.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 				<li class="submenu">
 					<a href="#">Nosotros</a>
 					<ul class="submenu">
-						<li><a class="anclas" href="nosotros.html">Nuestra Historia</a></li>
-						<li><a class="anclas" href="nosotros.html#propo">Nuestro Propósito</a></li>
-						<li><a class="anclas" href="nosotros.html#orga">Nuestra Organización</a></li>
-						<li><a class="anclas" href="nosotros.html#equipo">Nuestro Equipo</a></li>
-						<li><a class="anclas" href="#">Nuestros Sueños</a></li>
-						<li><a class="anclas" href="#">Nuestros Convenios</a></li>
-						<li><a class="anclas" href="#">Nuestros Compromisos</a></li>
-						<li><a class="anclas" href="#">Más Información</a></li>
+						<li><a href="nosotros.html#nHistoria">Nuestra Historia</a></li>
+						<li><a href="nosotros.html#nProposito">Nuestro Propósito</a></li>
+						<li><a href="nosotros.html#nOrganizacion">Nuestra Organización</a></li>
+						<li><a href="nosotros.html#nEquipo">Nuestro Equipo</a></li>
+						<li><a href="#">Nuestros Sueños</a></li>
+						<li><a href="#">Nuestros Convenios</a></li>
+						<li><a href="#">Nuestros Compromisos</a></li>
+						<li><a href="#">Más Información</a></li>
 					</ul>
 				</li>
 				<li class="submenu">
