--- a/nosotros.html
+++ b/nosotros.html
@@ -27,10 +27,10 @@
 				<li class="submenu">
 					<a href="#">Nosotros</a>
 					<ul class="submenu">
-						<li><a href="#historia">Nuestra Historia</a></li>
-						<li><a href="#propo">Nuestro Propósito</a></li>
-						<li><a href="#orga">Nuestra Organización</a></li>
-						<li><a href="#equipo">Nuestro Equipo</a></li>
+						<li><a href="nosotros.html#nHistoria">Nuestra Historia</a></li>
+						<li><a href="nosotros.html#nProposito">Nuestro Propósito</a></li>
+						<li><a href="nosotros.html#nOrganizacion">Nuestra Organización</a></li>
+						<li><a href="nosotros.html#nEquipo">Nuestro Equipo</a></li>
 						<li><a href="#">Nuestros Sueños</a></li>
 						<li><a href="#">Nuestros Convenios</a></li>
 						<li><a href="#">Nuestros Compromisos</a></li>
@@ -67,8 +67,9 @@
 	
 
 	<section>
+		<span class="anclas" id="nHistoria"></span>
 		<div id="pagName">Nosotros</div>
-		<div id="historia" class="sectionleft">
+		<div class="sectionleft">
 			<div class="sectionName">Nuestra Historia</div>
 			<div class="sectionDesc">
 				<p>
@@ -90,9 +91,9 @@
 	</section>
 
 	<section>
+		<span class="anclas" id="nProposito"></span>
 		<div class="sectionleft">
 			<div class="sectionName">
-			<a name="propo" "></a>
 				<h3>Nuestro Propósito</h3>
 			</div>
 			<div class="sectionDesc">
@@ -110,9 +111,9 @@
 
 
 	<section>
+		<span class="anclas" id="nOrganizacion"></span>
 		<div class="sectionleft">
 			<div class="sectionName">
-			<a name="orga" "></a>
 				<h3>Nuestra Organización</h3>
 			</div>
 			<div class="sectionDesc">
@@ -128,25 +129,9 @@
 		</div>
 	</section>
 
-	<section>
-		<div class="sectionleft">
-			<div class="sectionName">
-				<h3>Nuestro Equipo</h3>
-			</div>
-			<div class="sectionDesc">
-				<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
-				</p>
-			</div>
-		</div>
-		
-		<div id="sectionright">
-			<img src="img/1.jpg">
-			
-		</div>
-	</section>
 
 	<section id="equipo">
+		<span class="anclas" id="nEquipo"></span>
 		<div class="sectionName">
 				<h3>Nuestro Equipo</h3>
 		</div>
@@ -192,7 +177,7 @@
 
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO</p>
+				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 		</div>
 	</section>
