--- a/nosotros.html
+++ b/nosotros.html
@@ -138,50 +138,145 @@
 		<div class="team1">
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Arnold J. Reyes Cabrera<br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Jose Navarrete Del Rosario <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Jimmy Rios Burga<br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 		</div>
 		<div class="team">
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Belén Corzo<br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Ximena García Cartagena<br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Edu Peralta<br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Ricardo Asmat Marines<br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Freddy Ccopa<br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 
 			<div>
 				<div class="perfil"></div>
-				<p>VICTOR "EL CHINO" DEL ROSARIO GUERRERO <br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
+				<p>Anderson Herrera<br><a href="#"><i class="flaticon-social-linkedin-circular-button"></i></a></p>
 			</div>
 		</div>
 	</section>
 
+	<section>
+		<span class="anclas" id="nSuenos"></span>
+		<div class="sectionleft">
+			<div class="sectionName">
+				<h3>Nuestros Sueños</h3>
+			</div>
+			<div class="sectionDesc">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+			</div>
+		</div>
+		
+		<div id="sectionright">
+			<img src="img/1.jpg">
+			
+		</div>
+	</section>
+	
+	<section>
+		<span class="anclas" id="nConvenios"></span>
+		<div class="sectionleft">
+			<div class="sectionName">
+				<h3>Nuestros Convenios</h3>
+			</div>
+			<div class="sectionDesc">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+			</div>
+		</div>
+		
+		<div id="sectionright">
+			<img src="img/1.jpg">
+			
+		</div>
+	</section>
+
+	<section>
+		<span class="anclas" id="nCompromisos"></span>
+		<div class="sectionleft">
+			<div class="sectionName">
+				<h3>Nuestros Compromisos</h3>
+			</div>
+			<div class="sectionDesc">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+			</div>
+		</div>
+		
+		<div id="sectionright">
+			<img src="img/1.jpg">
+			
+		</div>
+	</section>
+
+	<section id="mInfo">
+		<span class="anclas" id="nInformacion"></span>
+		<div class="sectionleft">
+			<div class="sectionName">
+				<h3>Más Información</h3>
+			</div>
+			<div class="sectionDesc">
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 1</a></div>
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 2</a></div>
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 3</a></div>
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 4</a></div>
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 5</a></div>
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 6</a></div>
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 7</a></div>
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 8</a></div>
+				<div><a href=""><i class="material-icons">description</i>Documento Documento Documento Referencial 9</a></div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<span class="anclas" id="nCompromisos"></span>
+		<div class="sectionleft">
+			<div class="sectionName">
+				<h3>Nuestros Compromisos</h3>
+			</div>
+			<div class="sectionDesc">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem cum beatae temporibus cumque minima, vero optio magni delectus voluptates iste, aspernatur! Voluptatibus autem aut nulla blanditiis, officia amet, cumque.
+				</p>
+			</div>
+		</div>
+		
+		<div id="sectionright">
+			<img src="img/1.jpg">
+			
+		</div>
+	</section>
 
 	<footer>
 		<div id="btn-mail">
